--- a/docs/templates/elasticjs/tmpl/container.tmpl
+++ b/docs/templates/elasticjs/tmpl/container.tmpl
@@ -91,9 +91,10 @@
                 <span class="brand">Documentation {<span style="color:#557e2f;font-weight:500;"> elastic.js </span>}</span>
                 <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li><a href="/ejs.html">Home</a></li>
-                    <li><a href="https://gist.github.com/egaumer">Examples</a></li>
+                    <li><a href="http://www.fullscale.co/">Home</a></li>
+                    <li><a href="http://www.fullscale.co/elasticjs/">User Guide</a></li>
                     <li><a href="https://github.com/fullscale/elastic.js">Source</a></li>
+                    <li><a href="https://github.com/fullscale/elastic.js/tree/master/examples">Examples</a></li>
                 </ul>
             </div>
             </div>
