--- a/docs/templates/elasticjs/tmpl/container.tmpl
+++ b/docs/templates/elasticjs/tmpl/container.tmpl
@@ -95,6 +95,7 @@
                     <li><a href="http://www.fullscale.co/elasticjs/">User Guide</a></li>
                     <li><a href="https://github.com/fullscale/elastic.js">Source</a></li>
                     <li><a href="https://github.com/fullscale/elastic.js/tree/master/examples">Examples</a></li>
+                    <li><a href="/translator/">Translator</a></li>
                 </ul>
             </div>
             </div>
