--- a/docs/templates/elasticjs/tmpl/container.tmpl
+++ b/docs/templates/elasticjs/tmpl/container.tmpl
@@ -73,6 +73,7 @@
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-12991832-4']);
+      _gaq.push(['_setDomainName', 'fullscale.co']);
       _gaq.push(['_trackPageview']);
 
       (function() {
