fix home link in docs template

--- a/docs/templates/elasticjs/tmpl/container.tmpl
+++ b/docs/templates/elasticjs/tmpl/container.tmpl
@@ -92,7 +92,7 @@
                 <span class="brand">Documentation {<span style="color:#557e2f;font-weight:500;"> elastic.js </span>}</span>
                 <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li><a href="http://www.fullscale.co/">Home</a></li>
+                    <li><a href="/elasticjs/">Home</a></li>
                     <li><a href="http://www.fullscale.co/elasticjs/">User Guide</a></li>
                     <li><a href="https://github.com/fullscale/elastic.js">Source</a></li>
                     <li><a href="https://github.com/fullscale/elastic.js/tree/master/examples">Examples</a></li>
