--- a/docs/templates/elasticjs/tmpl/container.tmpl
+++ b/docs/templates/elasticjs/tmpl/container.tmpl
@@ -93,10 +93,10 @@
                 <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li><a href="/elasticjs/">Home</a></li>
-                    <li><a href="http://www.fullscale.co/elasticjs/">User Guide</a></li>
-                    <li><a href="https://github.com/fullscale/elastic.js">Source</a></li>
-                    <li><a href="https://github.com/fullscale/elastic.js/tree/master/examples">Examples</a></li>
-                    <li><a href="/translator/">Translator</a></li>
+                    <li><a target="_blank" href="http://www.fullscale.co/elasticjs/">Guide</a></li>
+                    <li><a target="_blank" href="https://github.com/fullscale/elastic.js/tree/master/examples">Examples</a></li>
+                    <li><a target="_blank" href="https://github.com/fullscale/elastic.js">Source</a></li>
+                    <li><a target="_blank" href="/translator/">Translator</a></li>
                 </ul>
             </div>
             </div>
