add support for additional jsdoc tags

--- a/docs/templates/elasticjs/tmpl/container.tmpl
+++ b/docs/templates/elasticjs/tmpl/container.tmpl
@@ -150,6 +150,8 @@
                     if (doc.description) {
                       print('<p class="description">' + doc.description + '</p>');
                     }
+
+                    print(render('details.tmpl', doc));
             
                     if (doc.examples && doc.examples.length) {
                       print('<h2>Example' + (doc.examples.length > 1? 's':'') + '</h2>');
