--- a/docs/templates/elasticjs/tmpl/method.tmpl
+++ b/docs/templates/elasticjs/tmpl/method.tmpl
@@ -41,7 +41,9 @@
             print('<div style="margin-left:15px">' + this.description + '</div><br>');
         }
     ?>  
-    
+   
+    <?js print(render('details.tmpl', this)); ?>
+ 
     <dl style="margin-left:15px;margin-right:20px;margin-top:0px;">  
 
         <?js
