--- a/docs/templates/elasticjs/tmpl/details.tmpl
+++ b/docs/templates/elasticjs/tmpl/details.tmpl
@@ -1,25 +1,25 @@
 <div class="alert-message block-message error">
-	<dl>
+	<dl style="margin-left:15px;margin-right:20px;margin-top:0px;margin-bottom:3px;">
 	<?js if (this.version) {?>
-	<dt class="tag-version">Version:</dt>
+	<dt class="tag-version">Version</dt>
 	<dd class="tag-version"><?js= version ?></dd>
 	<?js } ?>
 	
 	<?js if (this.since) {?>
-	<dt class="tag-since">Since:</dt>
+	<dt class="tag-since">Since</dt>
 	<dd class="tag-since"><?js= since ?></dd>
 	<?js } ?>
 	
 	<?js if (this.deprecated) { ?>
         <dt class="important tag-deprecated">Deprecated<?js
             if (this.deprecated === true) print('</dt><dd class="yes-def tag-deprecated">Yes</dd>');
-            else print(':</dt><dd>'+this.deprecated+'</dd>');
+            else print('</dt><dd>'+this.deprecated+'</dd>');
         ?>
         
         <?js } ?>
 	
 	<?js if (this.author && author.length) {?>
-	<dt class="tag-author">Author:</dt>
+	<dt class="tag-author">Author</dt>
 	<dd class="tag-author">
         <ul><?js
             author.forEach(function(a) {
@@ -30,22 +30,22 @@
 	<?js } ?>
 	
 	<?js if (this.copyright) {?>
-	<dt class="tag-copyright">Copyright:</dt>
+	<dt class="tag-copyright">Copyright</dt>
 	<dd class="tag-copyright"><?js= copyright ?></dd>
 	<?js } ?>
 	
 	<?js if (this.license) {?>
-	<dt class="tag-license">License:</dt>
+	<dt class="tag-license">License</dt>
 	<dd class="tag-license"><?js= license ?></dd>
 	<?js } ?>
 	
 	<?js if (this.defaultvalue) {?>
-	<dt class="tag-default">Default Value:</dt>
+	<dt class="tag-default">Default Value</dt>
 	<dd class="tag-default"><?js= this.defaultvalue ?></dd>
 	<?js } ?>
 	
 	<?js if (this.see && see.length) {?>
-	<dt class="tag-see">See:</dt>
+	<dt class="tag-see">See</dt>
 	<dd class="tag-see">
         <ul><?js
             see.forEach(function(s) {
@@ -56,7 +56,7 @@
 	<?js } ?>
 	
 	<?js if (this.todo && todo.length) {?>
-	<dt class="tag-todo">To Do:</dt>
+	<dt class="tag-todo">To Do</dt>
 	<dd class="tag-todo">
         <ul><?js
             todo.forEach(function(t) {
